@@ -7,9 +7,9 @@ Sources
 
 Releases
 {
-  v9r2p3
+  v9r2p4
   {
-    Modules = LHCbDIRAC:v9r2p3, LHCbWebDIRAC:v4r4p8
+    Modules = LHCbDIRAC:v9r2p4, LHCbWebDIRAC:v4r4p8
     Depends = DIRAC:v6r20p11
     LcgVer = v14r2
   }
